cambio validaciones a un archivo aparte, modifico identaciones

--- a/admin/src/web/templates/registro_pagos/edicion.html
+++ b/admin/src/web/templates/registro_pagos/edicion.html
@@ -85,7 +85,8 @@
 
 
         <label for="beneficiario">Beneficiario:</label>
-        <select name="beneficiario" id="beneficiario" required>
+        <select name="beneficiario" id="beneficiario">
+            <option value="" {% if not pago.beneficiario_id %}selected{% endif %}>Ninguno</option>
             {% for user in users %}
             <option value="{{ user.id }}" {% if user.id==pago.beneficiario_id %}selected{% endif %}>
                 {{ user.email }}
