--- a/admin/src/web/templates/user/index.html
+++ b/admin/src/web/templates/user/index.html
@@ -84,6 +84,10 @@
     <i class="fas fa-user-plus"></i> Crear usuario nuevo
 </a>
 
+<a href="{{ url_for('user.user_register') }}" class="btn btn-primary" style="margin-top: 10px; margin-bottom: 20px;">
+    <i class="fas fa-user-plus"></i> Finalizar registro de usuarios
+</a>
+
 <!-- Tabla de usuarios -->
 <table class="table table-striped">
     <thead>
