funcionalidadfuncionalidades de autenticacion con google andando

--- a/admin/src/web/templates/auth/login.html
+++ b/admin/src/web/templates/auth/login.html
@@ -96,8 +96,8 @@
             </div>
             <button type="submit" class="btn btn-login btn-block shadow-sm">Entrar</button>
         </form>
-        <a href="/login"><p>Iniciar sesión con Google!</p></a>
-        <a href="/login"><p>No tenes cuenta? Registrate con Google!</p></a>
+        <a href="/redlogin"><p>Iniciar sesión con Google!</p></a>
+        <a href="/redauth"><p>No tenes cuenta? Registrate con Google!</p></a>
 
         
     </div>
